--- a/templates/index.html
+++ b/templates/index.html
@@ -11,8 +11,8 @@
     <div style="background-color: white; width: 90vw; display: flex; justify-content: center;">
       <div style="width: 100%; height: 100%; margin-top: 50px;">
         <div style="text-align: center;">
-          <h2 style="color: red;">Used Car Price Prediction</h2>
-          <h3 style="color: blue;">Know the Price of Used Car before you want to buy</h3>
+          <h2 style="color: red;">Second Hand Car Price Prediction</h2>
+          <h3 style="color: blue;">Know the Price of Second Hand Car before you want to Buy</h3>
         </div>
 
         <form action="/predict" method="post">
